--- a/src/app/waterdrop/waterdrop.component.html
+++ b/src/app/waterdrop/waterdrop.component.html
@@ -1,38 +1,32 @@
-<div id="banner">
+<div id="banner" [style.--level]="level">
   <svg version="1.1" id="logo"
-  xmlns="http://www.w3.org/2000/svg"
-  xmlns:xlink="http://www.w3.org/1999/xlink"
-  x="0px" y="0px"
-  viewBox="-65 -20  280 180"
-  xml:space="preserve">
-      <defs>
-        <clipPath id="drop">
-          <!-- 只保留水滴外框 -->
-          <path transform="scale(0.75), translate(32,0)" 
-                d="M68.2,6.7c0,0-62.4,70.9-62.4,124.7c0,32.3,28,58.4,62.4,58.4s62.4-26.2,62.4-58.4
-                   C130.7,77.6,68.3,6.7,68.2,6.7z" />
-        </clipPath>
-      </defs>
-  
-      <!-- 藍色水波 -->
-      <g clip-path="url(#drop)">
-        <g class="fill">
-          <path fill="#04ACFF" id="waveShape"
-                d="M300,300V2.5c0,0-0.6-0.1-1.1-0.1c0,0-25.5-2.3-40.5-2.4c-15,0-40.6,2.4-40.6,2.4
-                   c-12.3,1.1-30.3,1.8-31.9,1.9c-2-0.1-19.7-0.8-32-1.9c0,0-25.8-2.3-40.8-2.4c-15,0-40.8,2.4-40.8,2.4c-12.3,1.1-30.4,1.8-32,1.9
-                   c-2-0.1-20-0.8-32.2-1.9c0,0-3.1-0.3-8.1-0.7V300H300z" />
-        </g>
-      </g>
-  
-      <!-- 水滴外框 -->
-      <g transform="scale(0.75), translate(32,0)">
-        <path class="st0"
+       xmlns="http://www.w3.org/2000/svg"
+       x="0" y="0" viewBox="-65 -20 280 180" xml:space="preserve">
+    <defs>
+      <clipPath id="drop">
+        <path transform="scale(0.75), translate(32,0)"
               d="M68.2,6.7c0,0-62.4,70.9-62.4,124.7c0,32.3,28,58.4,62.4,58.4s62.4-26.2,62.4-58.4
-                 C130.7,77.6,68.3,6.7,68.2,6.7z" />
-        <!-- $ 符號 -->
-        <text x="68" y="140" text-anchor="middle" font-size="60" font-weight="bold"
-              fill="white" stroke="black" stroke-width="4" paint-order="stroke">$</text>
+                 C130.7,77.6,68.3,6.7,68.2,6.7z"/>
+      </clipPath>
+    </defs>
+
+    <!-- 藍色水波 -->
+    <g clip-path="url(#drop)">
+      <g class="fill">
+        <path id="waveShape"
+              d="M300,300V2.5c0,0-0.6-0.1-1.1-0.1c0,0-25.5-2.3-40.5-2.4c-15,0-40.6,2.4-40.6,2.4
+                 c-12.3,1.1-30.3,1.8-31.9,1.9c-2-0.1-19.7-0.8-32-1.9c0,0-25.8-2.3-40.8-2.4c-15,0-40.8,2.4-40.8,2.4c-12.3,1.1-30.4,1.8-32,1.9
+                 c-2-0.1-20-0.8-32.2-1.9c0,0-3.1-0.3-8.1-0.7V300H300z"/>
       </g>
-    </svg>
-  </div>
-  
+    </g>
+
+    <!-- 水滴外框 + $ -->
+    <g transform="scale(0.75), translate(32,0)">
+      <path class="st0"
+            d="M68.2,6.7c0,0-62.4,70.9-62.4,124.7c0,32.3,28,58.4,62.4,58.4s62.4-26.2,62.4-58.4
+               C130.7,77.6,68.3,6.7,68.2,6.7z"/>
+      <text x="68" y="140" text-anchor="middle" font-size="60" font-weight="bold"
+            fill="white" stroke="black" stroke-width="4" paint-order="stroke">$</text>
+    </g>
+  </svg>
+</div>
